# webtools

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.agents/commands/: pr.md
.github/workflows/: merge-release.yml  release.yml
ci/: README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: compress.rs  lib.rs  tls.rs
crates/webfetch/: Cargo.toml  README.md
crates/webfetch/src/: extract.rs  fetch.rs  guard.rs  lib.rs  types.rs
crates/webfetch/src/convert/: markdown.rs  structured.rs
crates/webfetch/tests/: e2e.rs
crates/webfetch/tests/fixtures/: docs.html
crates/websearch/: Cargo.toml  README.md
crates/websearch/src/: extract.rs  lib.rs  types.rs
crates/websearch/tests/: search_e2e.rs
crates/websearch/tests/fixtures/: ddg_lite.html
docs/: install.md  product.md
examples/: latency.rs
src/: lib.rs  main.rs  mcp.rs  refs.rs  types.rs
src/convert/: markdown.rs  mod.rs  text.rs
src/search/: mod.rs  types.rs
tests/: search_e2e.rs
tests/fixtures/: blog.html  spa-shell.html
