[package]
name = "webfetch"
version = "0.1.0"
edition = "2021"
description = "Token-efficient web content fetcher with reference-style URL preservation"

[lib]
name = "webfetch"
path = "src/lib.rs"

[[bin]]
name = "webfetch"
path = "src/main.rs"

[[bin]]
name = "websearch"
path = "src/bin/websearch.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
scraper = "0.19"
ego-tree = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
url = "2.5"
regex = "1.10"
once_cell = "1.19"
anyhow = "1.0"
urlencoding = "2.1"
