[workspace]
members = ["crates/core", "crates/webfetch", "crates/websearch"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
url = "2.5"
scraper = "0.19"
ego-tree = "0.6"
urlencoding = "2.1"
once_cell = "1.19"
# Internal crates
webfetch-core = { path = "crates/core" }
webfetch = { path = "crates/webfetch" }
websearch = { path = "crates/websearch" }

# The workspace root is also the unified CLI binary.
[package]
name = "webfetch-tools"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for the webfetch/websearch tools"

[[bin]]
name = "webfetch-tools"
path = "src/main.rs"

[dependencies]
webfetch = { workspace = true }
websearch = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
