[workspace]
members = ["crates/core", "crates/webfetch", "crates/websearch"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
url = "2.5"
scraper = "0.19"
ego-tree = "0.6"
urlencoding = "2.1"
once_cell = "1.19"
# Internal crates
webfetch-core = { path = "crates/core" }
webfetch = { path = "crates/webfetch" }
websearch = { path = "crates/websearch" }

# The workspace root is also the unified CLI binary.
[package]
name = "webtools"
version = "0.1.1"
edition = "2021"
description = "Unified, token-efficient web fetch + search CLI for LLM agents"

[[bin]]
name = "webtools"
path = "src/main.rs"

[dependencies]
webfetch = { workspace = true }
websearch = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

# Optimized for a small, blazing-fast shipped binary.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
