[package]
name = "webtools-core"
version = "0.1.12"
edition = "2021"
description = "Shared primitives: compression, token budgeting, and reference-style URLs"
license = "MIT"
repository = "https://github.com/kolisachint/webtools"
homepage = "https://github.com/kolisachint/webtools"
readme = "README.md"
keywords = ["token", "llm", "agent", "fetch", "url"]
categories = ["web-programming", "text-processing"]

[lib]
name = "webfetch_core"

[dependencies]
serde = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
