[package]
name = "webtools-fetch"
version = "0.1.12"
edition = "2021"
description = "Token-efficient web content fetcher with reference-style URL preservation"
license = "MIT"
repository = "https://github.com/kolisachint/webtools"
homepage = "https://github.com/kolisachint/webtools"
readme = "README.md"
keywords = ["token", "llm", "agent", "fetch", "url"]
categories = ["web-programming", "text-processing"]

[lib]
name = "webfetch"

[dependencies]
webfetch-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
ego-tree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
