[package]
name = "webtools-search"
version = "0.1.12"
edition = "2021"
description = "Zero-infrastructure web search (DuckDuckGo Lite) with reference-style URLs"
license = "MIT"
repository = "https://github.com/kolisachint/webtools"
homepage = "https://github.com/kolisachint/webtools"
readme = "README.md"
keywords = ["search", "llm", "agent", "duckduckgo", "url"]
categories = ["web-programming", "text-processing"]

[lib]
name = "websearch"

[dependencies]
webfetch-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
urlencoding = { workspace = true }
